crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__hour__multiple__all_periodic__specifier.snap
---
source: crates/tools/cron/src/tests/unit/hour.rs
expression: result
---
Ok(
    (
        ",1",
        HourRule {
            kinds: [
                HourKind {
                    range: (
                        Hour(
                            0,
                        ),
                        Hour(
                            23,
                        ),
                    ),
                    periodic: HourPeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
